Add common static elements to all pages in the html template

--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todos List</title>
 </head>
 <body>
-    <h1>Todos List</h1>
+    <header>
+        <nav id="nav-bar">
+            <button id="home" class="btns">Home</button>
+            <button id="projects" class="btns">Projects</button>
+        </nav>
+    </header>
+    <main id="content">
+
+    </main>
 </body>
 </html>
