--- a/src/template.html
+++ b/src/template.html
@@ -15,5 +15,14 @@
     <main id="content">
 
     </main>
+    <dialog class="modal" id="projects-modal">
+        <h2 class="modal-heading">Add new project</h2>
+        <form action="" dialog>
+            <label for="project-name"></label>
+            <input type="text" id="project-name" name="project-name">
+            <button type="submit">Update</button>
+        </form>
+        <button class="modal-close-btn">Close</button>
+    </dialog>
 </body>
 </html>
