Add class to projects modal form

--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,7 @@
     </main>
     <dialog class="modal" id="projects-modal">
         <h2 class="modal-heading">Add new project</h2>
-        <form action="" dialog>
+        <form class="add-project-modal-form" action="" dialog>
             <label for="project-name"></label>
             <input type="text" id="project-name" name="project-name">
             <button type="submit">Update</button>
