Change class name of add project button

--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
         <form class="add-project-modal-form" action="" dialog>
             <label for="project-name"></label>
             <input type="text" id="project-name" name="project-name">
-            <button type="submit">Update</button>
+            <button class="add-new-project-btn" type="submit">Update</button>
         </form>
         <button class="modal-close-btn">Close</button>
     </dialog>
