--- a/src/template.html
+++ b/src/template.html
@@ -15,6 +15,8 @@
     <main id="content">
 
     </main>
+
+    <!-- Add project modal -->
     <dialog class="modal" id="projects-modal">
         <h2 class="modal-heading">Add new project</h2>
         <form class="add-project-modal-form" action="" dialog>
@@ -23,6 +25,34 @@
             <button class="add-new-project-btn" type="submit">Update</button>
         </form>
         <button class="modal-close-btn">Close</button>
+    </dialog>
+
+    <!-- Add todo item to project modal -->
+    <dialog class="modal" id="individual-project-modal">
+        <h2 class="modal-heading">Add todo</h2>
+        <form class="add-todo-modal-form" action="" dialog>
+            <div>
+                <label for="todo-title">Title:</label>
+                <input type="text" id="todo-title" name="title">
+            </div>
+            <div>
+                <label for="todo-date">Duedate:</label>
+                <input type="date" id="todo-date" name="duedate">
+            </div>
+            <div>
+                <label for="todo-priority">Priority:</label>
+                <input type="text" id="todo-priority" name="priority">
+            </div>
+            <div class="description-container">
+                <label for="todo-description">Description:</label>
+                <textarea name="description" id="todo-description"></textarea>
+            </div>
+
+
+
+            <button class="add-new-todo-btn" type="submit">Update</button>
+        </form>
+        <button class="individual-modal-close-btn">Close</button>
     </dialog>
 </body>
 </html>
