Change submit button content

--- a/src/template.html
+++ b/src/template.html
@@ -50,7 +50,7 @@
 
 
 
-            <button class="add-new-todo-btn" type="submit">Update</button>
+            <button class="add-new-todo-btn" type="submit">Add</button>
         </form>
         <button class="individual-modal-close-btn">Close</button>
     </dialog>
