--- a/src/template.html
+++ b/src/template.html
@@ -54,5 +54,33 @@
         </form>
         <button class="individual-modal-close-btn">Close</button>
     </dialog>
+
+    <!-- EDIT TODO DIALOG -->
+    <dialog class="modal" id="edit-todo-modal">
+        <h2 class="modal-heading">Edit todo</h2>
+        <form class="edit-todo-modal-form" action="" dialog>
+            <div>
+                <label for="edit-title">Title:</label>
+                <input type="text" id="edit-title" name="title">
+            </div>
+            <div>
+                <label for="edit-date">Duedate:</label>
+                <input type="date" id="edit-date" name="duedate">
+            </div>
+            <div>
+                <label for="edit-priority">Priority:</label>
+                <input type="text" id="edit-priority" name="priority">
+            </div>
+            <div class="description-container">
+                <label for="edit-description">Description:</label>
+                <textarea name="description" id="edit-description"></textarea>
+            </div>
+
+
+
+            <button class="edit-current-todo-btn" type="submit">Update</button>
+        </form>
+        <button class="edit-modal-close-btn">Close</button>
+    </dialog>
 </body>
 </html>
